# renju-benchmark

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: public_examples.jsonl  puzzles.jsonl
docs/: design.md  kaggle.md  rapfi.md  rl.md  scoring.md
kaggle_tasks/: renju_model_arena_public.py  renju_next_move_public.py  renju_rule_classification_public.py
renju_benchmark/: __init__.py  agents.py  demo.py  kaggle_tasks.py  rapfi.py  rating.py  rules.py  tasks.py
renju_benchmark/rl/: __init__.py  board_encoding.py  datasets.py  inference.py  policy_value_net.py  rapfi_env.py  search.py  self_play.py  symbolic.py
scripts/: build_arena_task.py  evaluate_records.py  generate_puzzles.py  rapfi_annotate.py  rapfi_move.py  rate_arena_results.py  rl_collect_rapfi.py  rl_collect_self_play.py  rl_collect_tactical.py  rl_convert_next_move_records.py  rl_eval_imitation.py  rl_eval_symbolic.py  rl_evaluate_vs_rapfi.py  rl_evaluate_vs_tactical.py  rl_fit_symbolic.py  rl_init_random_hrm.py  rl_policy_move.py  rl_run_experiment.py  rl_summarize_runs.py  rl_train_imitation.py  rl_train_self_play.py  setup_rapfi.py  summarize_records.py  validate_puzzles.py
tests/: test_kaggle_push_files.py  test_kaggle_tasks.py  test_rapfi.py  test_rate_arena_results.py  test_rating.py  test_repository_hygiene.py  test_rl.py  test_rules.py  test_tasks.py
